--- a/components/zhuanpan/zhuanpan.wxml
+++ b/components/zhuanpan/zhuanpan.wxml
@@ -1,4 +1,3 @@
-<!--components/zhuanpan/zhuanpan.wxml-->
 <view class="canvas-container">
    <!-- 外围边框 -->
    <!-- <view class='gb-wheel-run' style=''></view> -->
@@ -28,8 +27,13 @@
    </view>
 
    <!-- 转盘中间的按钮 -->
-   <image bindtap="_zhuan" src='https://gamesdata.oss-cn-hangzhou.aliyuncs.com/xiaojueding/canvas_button_go_unclick.png' style='width:{{size.h/4.4}}rpx;position:absolute;left:41%;top:38%;margin-top:-11rpx;z-index:9999;display:{{block1}}' mode='widthFix'></image>
-   <image src='https://gamesdata.oss-cn-hangzhou.aliyuncs.com/xiaojueding/canvas_button_go_click.png' style='width:{{size.h/4.4}}rpx;position:absolute;left:41%;top:38%;margin-top:-11rpx;z-index:9999;display:{{block2}}' mode='widthFix'></image>
+   <image src='https://gamesdata.oss-cn-hangzhou.aliyuncs.com/xiaojueding/canvas_button_go_unclick.png' style='width:{{size.h/4.4}}rpx;position:absolute;left:41%;top:38%;margin-top:-11rpx;z-index:9999' mode='widthFix'></image>
+   <!-- <image src='https://gamesdata.oss-cn-hangzhou.aliyuncs.com/xiaojueding/canvas_button_go_click.png' style='width:{{size.h/4.4}}rpx;position:absolute;left:41%;top:38%;margin-top:-11rpx;z-index:9999;display:{{block2}}' mode='widthFix'></image>
    <image bindtap="reset" src='https://gamesdata.oss-cn-hangzhou.aliyuncs.com/xiaojueding/canvas_button_reset_unclick.png' style='width:{{size.h/4.4}}rpx;left:41%;top:38%;position: absolute;margin-top:-11rpx;z-index:9999;display:{{block3}}' mode='widthFix'></image>
-   <image src='https://gamesdata.oss-cn-hangzhou.aliyuncs.com/xiaojueding/canvas_button_reset_click.png' style='width:{{size.h/4.4}}rpx;position:absolute;left:41%;top:38%;margin-top:-11rpx;z-index:9999;display:{{block4}}' mode='widthFix'></image>
+   <image src='https://gamesdata.oss-cn-hangzhou.aliyuncs.com/xiaojueding/canvas_button_reset_click.png' style='width:{{size.h/4.4}}rpx;position:absolute;left:41%;top:38%;margin-top:-11rpx;z-index:9999;display:{{block4}}' mode='widthFix'></image> -->
+
 </view>
+
+   <view wx:if="{{showGif}}" style='background:rgba(0,0,0,0.8);position:absolute; width:100%;height:100%;position:absolute;z-index:99999;top:0;left:0;'>
+        <image src='http://rp.nladuo.cn/rp_api/static/huangshang.gif' style='width:{{size.h}}rpx;position:absolute;left:11%;top:23%;margin-top:-11rpx;z-index:99999' mode='widthFix'></image>
+   </view>  
