--- a/components/zhuanpan/zhuanpan.wxml
+++ b/components/zhuanpan/zhuanpan.wxml
@@ -35,5 +35,5 @@
 </view>
 
    <view wx:if="{{showGif}}" style='background:rgba(0,0,0,0.8);position:absolute; width:100%;height:100%;position:absolute;z-index:99999;top:0;left:0;'>
-        <image src='http://rp.nladuo.cn/rp_api/static/huangshang.gif' style='width:{{size.h}}rpx;position:absolute;left:11%;top:23%;margin-top:-11rpx;z-index:99999' mode='widthFix'></image>
+        <image src='{{gifArray[resultNum]}}' style='width:{{size.h}}rpx;position:absolute;left:11%;top:23%;margin-top:-11rpx;z-index:99999' mode='widthFix'></image>
    </view>  
