--- a/pages/room/room.wxss
+++ b/pages/room/room.wxss
@@ -1,1 +1,42 @@
 /* pages/room/room.wxss */
+
+.room {
+    height: 95%;
+    background-color: rgba(0,0,0,0.3);
+    margin-top: 3%;
+    margin-right: 30rpx;
+    margin-left: 30rpx;
+    padding: 0 30rpx;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    justify-content: space-around
+}
+
+.palyer-item {
+    border-bottom: 1rpx solid #fff
+}
+
+.status {
+    color: #fff;
+}
+
+
+.room-title{
+    color: #fff;
+    display: inline-block;
+    margin-bottom: 50rpx;
+    
+}
+.player-list{
+    flex: 2;
+    width: 100%;
+
+}
+.button-group{
+    flex: 1;
+    width: 100%;
+
+}
